# haskell-monsters

./: Main.hs  README.md  haskell-monsters.cabal
