cabal-version:       >=1.10
name:                haskell-monsters
version:             0.1.0.0
license-file:        LICENSE
author:              Attila Süli
maintainer:          suli.zakar.attila@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell-monsters
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15, random, gloss
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
